--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,20 @@
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
+			#info {
+				position: absolute;
+				top: 10px;
+				width: 100%;
+				text-align: center;
+				z-index: 100;
+				display:block;
+			}
 		</style>
 	</head>
 	<body>
+		<div id='info'>
+			<p>click - pick an element, dblclick - go to info, Esc - go back</p>
+		</div>
 	</body>
 	<script type="text/javascript" src="bundle.js"></script></body>
 </html>
