split view added

--- a/app/index.html
+++ b/app/index.html
@@ -7,16 +7,27 @@
 			#info {
 				position: absolute;
 				top: 10px;
-				width: 100%;
+				width: 50%;
 				text-align: center;
 				z-index: 100;
 				display:block;
+			}
+			#test {
+				width: 50%;
+				height: 100%;
+			}
+			#canvasDiagram {
+				height: 100%;
 			}
 		</style>
 	</head>
 	<body>
 		<div id='info'>
 			<p>click - pick an element, dblclick - go to info, Esc - go back</p>
+		</div>
+		<div id = 'test'>
+			<div id='canvasDiagram'>
+			</div>
 		</div>
 	</body>
 	<script type="text/javascript" src="bundle.js"></script></body>
