syncing navigation for group observer

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 		<div id = 'test'>
 			<div id='canvasDiagram'>
 			</div>
-			<div id="state">
+			<form id="state">
 					<span>Mode:</span>
 					<input id="mode" type="text" value="Group mode">
 					<span>Group:</span>
@@ -45,9 +45,8 @@
 					<span>Layer:</span>
 					<input id="layer" type="text" value="">
 					<input id="button" type="button" value="Go">
-					<input id="some" type="time">
 				  </div>
-		</div>
+			</form>
 	</body>
 	<script type="text/javascript" src="bundle.js"></script></body>
 </html>
