--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 	</head>
 	<body>
 		<div id='info'>
-			<p>click - pick an element, dblclick - go to info, Esc - go back</p>
+			<p>click - pick an element, dblclick - go to info, Esc - go back, ` - go global</p>
 		</div>
 		<div id = 'test'>
 			<div id='canvasDiagram'>
