--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,16 @@
 				margin: 0;
 				height: 100%; 
 			}
+			label {
+				margin-top: 10px;
+			}
 			canvas { width: 100%; height: 100% }
 			#info {
 				position: absolute;
 				top: 10px;
 				width: 50%;
 				text-align: center;
-				z-index: 100;
+				z-index: 200;
 				display:block;
 			}
 			#root {
@@ -21,9 +24,7 @@
 			}
 			.App {
 				position: absolute;
-				top: 10px;
 				width: 100%;
-				text-align: center;
 				z-index: 100;
 				display:flex;
 			}
