implementation of some real data

--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,9 @@
 		</style>
 	</head>
 	<body>
-		<div id='info'>
+		<!-- <div id='info'>
 			<p>click - pick an element, dblclick - go to info, Esc - go back, ` - go global</p>
-		</div>
+		</div> -->
 		<div id = 'root'>
 		</div>
 		<!-- <div id = 'root'></div> -->
